dataset1235/2025-2/2868285114/users/214715729/executions/3649835072_2383239197.log
== SUBMISSION (2025-08-22 03:04:56)
-- CODE: 
import math
a = float(input("Digite a distancia 'a' (observador-primeira arvore):"))
b = float(input("Digite a distancia 'b'(observador-segunda arvore):"))
angulo_graus = float(input("Digite o angulo 'gama' em graus: "))

angulos_radianos = math.radians(angulo_graus)
qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 04:20:08)
-- CODE: 
import math
a = float(input("Digite a distancia 'a' observador-primeira arvore: "))
b = float(input("Digite a distancia 'b'observador-segunda arvore: "))
angulo_graus = float(input("Digite o angulo y entre a e b em graus: "))

angulos_radianos = math.radians(angulo_graus)
sqrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^^
NameError: name 'sqrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 04:32:16)
-- CODE: 
a = float(input())
b = float(input())
gamma = float(input())
gamma_rad = math.radians
c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
print(f"{c:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 04:32:18)
-- CODE: 
a = float(input())
b = float(input())
gamma = float(input())
gamma_rad = math.radians
c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
print(f"{c:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 03:08:26)
-- CODE: 
import math
a = float(input("Digite a distancia 'a' observador-primeira arvore: "))
b = float(input("Digite a distancia 'b'observador-segunda arvore: "))
angulo_graus = float(input("Digite o angulo 'gama' em graus: "))

angulos_radianos = math.radians(angulo_graus)
qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 03:08:28)
-- CODE: 
import math
a = float(input("Digite a distancia 'a' observador-primeira arvore: "))
b = float(input("Digite a distancia 'b'observador-segunda arvore: "))
angulo_graus = float(input("Digite o angulo 'gama' em graus: "))

angulos_radianos = math.radians(angulo_graus)
qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 04:24:47)
-- CODE: 
from math import aqrt, cos
a = float(input("Digite a distancia 'a' observador-primeira arvore: "))
b = float(input("Digite a distancia 'b'observador-segunda arvore: "))
angulo_graus = float(input("Digite o angulo y entre a e b em graus: "))

angulos_radianos = math.radians(angulo_graus)
distancia_entre_arvores = sqrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import aqrt, cos
ImportError: cannot import name 'aqrt' from 'math' (unknown location)
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import aqrt, cos
ImportError: cannot import name 'aqrt' from 'math' (unknown location)
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import aqrt, cos
ImportError: cannot import name 'aqrt' from 'math' (unknown location)
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import aqrt, cos
ImportError: cannot import name 'aqrt' from 'math' (unknown location)
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import aqrt, cos
ImportError: cannot import name 'aqrt' from 'math' (unknown location)
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import aqrt, cos
ImportError: cannot import name 'aqrt' from 'math' (unknown location)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 03:09:40)
-- CODE: 
import math
a = float(input("Digite a distancia 'a' observador-primeira arvore: "))
b = float(input("Digite a distancia 'b'observador-segunda arvore: "))
angulo_graus = float(input("Digite o angulo y entre a e b em graus: "))

angulos_radianos = math.radians(angulo_graus)
qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 04:34:50)
-- CODE: 
import math
a = float(input())
b = float(input())
gamma = float(input())
gamma_rad = math.radians
c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
print(f"{c:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 03:08:31)
-- CODE: 
import math
a = float(input("Digite a distancia 'a' observador-primeira arvore: "))
b = float(input("Digite a distancia 'b'observador-segunda arvore: "))
angulo_graus = float(input("Digite o angulo 'gama' em graus: "))

angulos_radianos = math.radians(angulo_graus)
qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qrt(a**2 + b*2 - 2 * a * b * math.cos(angulos_radianos))
    ^^^
NameError: name 'qrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 04:35:23)
-- CODE: 
import math
a = float(input())
b = float(input())
gamma = float(input())
gamma_rad = math.radians(gamma)
c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
print(f"{c:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 04:34:49)
-- CODE: 
import math
a = float(input())
b = float(input())
gamma = float(input())
gamma_rad = math.radians
c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
print(f"{c:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
                                            ^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not builtin_function_or_method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 04:32:29)
-- CODE: 
a = float(input())
b = float(input())
gamma = float(input())
gamma_rad = math.radians
c = math.sqrt(a**2 + b**2 - 2 * a * b * math.cos(gamma_rad))
print(f"{c:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    gamma_rad = math.radians
                ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
